--- a/exercises/1-foundations/exercise.ipynb
+++ b/exercises/1-foundations/exercise.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -236,12 +236,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1. Joci: 100',\n",
+       " '2. Sara: 99',\n",
+       " '3. Kora: 90',\n",
+       " '4. Jan: 84',\n",
+       " '5. John: 66',\n",
+       " '6. Bern: 53',\n",
+       " '7. Fred: 47']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def student_ranking(student_scores, student_names):\n",
-    "   return([f\"{i}. {student_names[i]}: {student_scores[i]}\" for i in range(len(student_scores))])\n"
+    "   return([f\"{i+1}. {student_names[i]}: {student_scores[i]}\" for i in range(len(student_scores))])\n",
+    "\n",
+    "student_scores = [100, 99, 90, 84, 66, 53, 47]\n",
+    "student_names =  ['Joci', 'Sara','Kora','Jan','John','Bern', 'Fred']\n",
+    "student_ranking(student_scores, student_names)"
    ]
   },
   {
@@ -269,10 +290,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Alex', 100]\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def perfect_score(student_info):\n",
+    "    result = [pair for pair in student_info if pair[1] == 100]\n",
+    "    return(result[0] if len(result) > 0  else [])\n",
+    "print(perfect_score(student_info=[[\"Charles\", 90], [\"Tony\", 80], [\"Alex\", 100]]))\n",
+    "print(perfect_score(student_info=[[\"Charles\", 90], [\"Tony\", 80]]))"
+   ]
   }
  ],
  "metadata": {
