--- a/exercises/1-foundations/exercise.ipynb
+++ b/exercises/1-foundations/exercise.ipynb
@@ -34,23 +34,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[90, 40, 55, 70, 31, 25, 80, 95, 39, 40]\n"
+     ]
+    }
+   ],
    "source": [
     "# Define `student_scores`\n",
     "student_scores = [90.33, 40.5, 55.44, 70.05, 30.55, 25.45, 80.45, 95.3, 38.7, 40.3]\n",
     "\n",
     "# Define `round_scores(list_of_floats)`\n",
     "def round_scores(student_scores):\n",
-    "    # Initialize an empty list\n",
-    "    rounded_scores = []\n",
-    "    # Iterate over the elements of `student_scores`\n",
-    "    for score in student_scores:\n",
-    "        # Round each element and then append it to `rounded_scores`\n",
-    "        # FIXME: Append the rounded score to `rounded_scores` instead of `None`\n",
-    "    # Return `rounded_scores`\n",
-    "    return rounded_scores\n",
+    "    li = []\n",
+    "    for value in student_scores:\n",
+    "        li.append(round(value))\n",
+    "    return li\n",
     "\n",
     "# Call `round_scores()` and print the result\n",
     "print(round_scores(student_scores))"
@@ -77,10 +81,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_failed_students(student_scores):\n",
+    "    failed_num = 0\n",
+    "    for grade in student_scores:\n",
+    "        if grade <= 40:\n",
+    "            failed_num = failed_num + 1\n",
+    "    return failed_num\n",
+    "print(count_failed_students(student_scores=[90,40,55,70,30,25,80,95,38,40]))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -102,10 +122,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[90, 75, 83, 96]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def above_threshold(student_scores, threshold):\n",
+    "\n",
+    "    li = []\n",
+    "    for number in student_scores:\n",
+    "        if number >= threshold:\n",
+    "            li.append(number)\n",
+    "    return li\n",
+    "print(above_threshold(student_scores=[90,40,55,70,30,68,70,75,83,96], threshold=75))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -147,10 +184,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[41, 56, 71, 86]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def letter_grades(highest):\n",
+    "\n",
+    "    li = []\n",
+    "    remaining = highest - 40\n",
+    "    for number in range(1,5):\n",
+    "        li.append(41 + (number -1) * round(remaining/4))\n",
+    "    return li\n",
+    "print(letter_grades(highest=100))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -177,10 +231,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1. Joci: 100', '2. Sara: 99', '3. Kora: 90', '4. Jan: 84', '5. John: 66', '6. Bern: 53', '7. Fred: 47']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def student_ranking(student_scores, student_names):\n",
+    "\n",
+    "    li = []\n",
+    "    for index, name in enumerate(student_names):\n",
+    "        li.append(f\"{index + 1}. {name}: {student_scores[index]}\")\n",
+    "    return li\n",
+    "student_scores = [100, 99, 90, 84, 66, 53, 47]\n",
+    "student_names =  ['Joci', 'Sara','Kora','Jan','John','Bern', 'Fred']\n",
+    "print(student_ranking(student_scores, student_names))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -207,10 +279,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Alex', 100]\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def perfect_score(student_info):\n",
+    "\n",
+    "    out = []\n",
+    "    for info in student_info:\n",
+    "        if info[1] == 100:\n",
+    "            out = info\n",
+    "            return out\n",
+    "            break \n",
+    "    if out == []:\n",
+    "        return []\n",
+    "    \n",
+    "print(perfect_score(student_info=[[\"Charles\", 90], [\"Tony\", 80], [\"Alex\", 100]]))\n",
+    "print(perfect_score(student_info=[[\"Charles\", 90], [\"Tony\", 80]]))"
+   ]
   }
  ],
  "metadata": {
@@ -229,7 +324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
