--- a/exercises/4-classification/exercise4-5.ipynb
+++ b/exercises/4-classification/exercise4-5.ipynb
@@ -76,17 +76,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.Requirement already satisfied: emnist in c:\\users\\wilso\\onedrive\\documents from long ago\\datasci 223\\datasci_223\\.venv\\lib\\site-packages (from -r requirements.txt (line 1)) (0.0)\n",
+      "Requirement already satisfied: pandas in c:\\users\\wilso\\onedrive\\documents from long ago\\datasci 223\\datasci_223\\.venv\\lib\\site-packages (from -r requirements.txt (line 2)) (2.2.0)\n",
+      "Collecting pyarrow (from -r requirements.txt (line 3))\n",
+      "  Using cached pyarrow-15.0.0-cp312-cp312-win_amd64.whl.metadata (3.1 kB)\n",
+      "Requirement already satisfied: numpy in c:\\users\\wilso\\onedrive\\documents from long ago\\datasci 223\\datasci_223\\.venv\\lib\\site-packages (from -r requirements.txt (line 4)) (1.26.4)\n",
+      "Requirement already satisfied: matplotlib in c:\\users\\wilso\\onedrive\\documents from long ago\\datasci 223\\datasci_223\\.venv\\lib\\site-packages (from -r requirements.txt (line 5)) (3.8.3)\n",
+      "Requirement already satisfied: seaborn in c:\\users\\wilso\\onedrive\\documents from long ago\\datasci 223\\datasci_223\\.venv\\lib\\site-packages (from -r requirements.txt (line 6)) (0.13.2)\n",
+      "Requirement already satisfied: scikit-learn in c:\\users\\wilso\\onedrive\\documents from long ago\\datasci 223\\datasci_223\\.venv\\lib\\site-packages (from -r requirements.txt (line 7)) (1.4.0)\n",
+      "Requirement already satisfied: xgboost in c:\\users\\wilso\\onedrive\\documents from long ago\\datasci 223\\datasci_223\\.venv\\lib\\site-packages (from -r requirements.txt (line 8)) (2.0.3)\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: Could not find a version that satisfies the requirement tensorflow (from versions: none)\n",
+      "ERROR: No matching distribution found for tensorflow\n"
+     ]
+    }
+   ],
    "source": [
-    "%pip install -q emnist pandas pyarrow numpy matplotlib seaborn scikit-learn xgboost tensorflow\n",
-    "%reset -f"
+    "%pip install -r requirements.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,21 +132,22 @@
     "# Logistic Regression\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import cross_val_score, KFold, ParameterGrid, train_test_split\n",
+    "\n",
     "# XGBoost (SVM)\n",
     "from xgboost import XGBClassifier\n",
     "# Deep Learning\n",
-    "import tensorflow as tf\n",
-    "from tensorflow import keras\n",
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense, Flatten\n",
-    "\n",
+    "#import tensorflow as tf\n",
+    "#from tensorflow import keras\n",
+    "#from tensorflow.keras.models import Sequential\n",
+    "#from tensorflow.keras.layers import Dense, Flatten\n",
     "# Constants\n",
     "SIZE = 28"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,6 +161,13 @@
     "    else:\n",
     "        return chr(label - 36 + ord('a'))\n",
     "\n",
+    "def which_case(case):\n",
+    "    \"\"\"Group lower cases as 0, and upper cases as 1\"\"\"\n",
+    "    if np.char.islower(case):\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return 1\n",
+    "    \n",
     "def show_image(row):\n",
     "    \"\"\"Display a single image and its corresponding label.\"\"\"\n",
     "    image = row['image']\n",
@@ -231,91 +263,196 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(697932, 2)\n",
+      "(814255, 2)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Load data\n",
-    "\n",
-    "# Extract the training split as images and labels\n",
+    "# extract both training and test from emnist\n",
     "image, label = emnist.extract_training_samples('byclass')\n",
-    "\n",
-    "# Add columns for each pixel value (28x28 = 784 columns)\n",
-    "emnist_train = pd.DataFrame()\n",
-    "\n",
-    "# Add a column with the image data as a 28x28 array\n",
-    "emnist_train['image'] = list(image)\n",
-    "emnist_train['image_flat'] = emnist_train['image'].apply(lambda x: np.array(x).reshape(-1))\n",
-    "\n",
-    "# Add a column showing the label\n",
-    "emnist_train['label'] = label\n",
-    "\n",
-    "# Convert labels to characters\n",
-    "class_label = np.array([int_to_char(l) for l in label])\n",
-    "\n",
-    "# Add a column with the character corresponding to the label\n",
-    "emnist_train['class'] = class_label\n",
-    "\n",
-    "# Repeat for the test split\n",
+    "raw_train = pd.DataFrame()\n",
+    "raw_train['label'] = label\n",
+    "raw_train['image'] = list(image)\n",
     "image, label = emnist.extract_test_samples('byclass')\n",
-    "class_label = np.array([int_to_char(l) for l in label])\n",
-    "emnist_test = pd.DataFrame()\n",
-    "emnist_test['image'] = list(image)\n",
-    "emnist_test['image_flat'] = emnist_test['image'].apply(lambda x: np.array(x).reshape(-1))\n",
-    "emnist_test['label'] = label\n",
-    "emnist_test['class'] = class_label\n",
-    "\n",
-    "# Combine the training and test splits\n",
-    "emnist_all = pd.concat([emnist_train, emnist_test], axis=0)\n",
-    "\n",
-    "# Subset for only digits 0-9\n",
-    "digits = emnist_all[emnist_all['label'] < 10]\n",
-    "\n",
-    "# Subset for lowercase letters\n",
-    "lowercase = emnist_all[(emnist_all['class'] >= 'a') & (emnist_all['class'] <= 'z')]\n",
-    "uppercase = emnist_all[(emnist_all['class'] >= 'A') & (emnist_all['class'] <= 'Z')]\n",
-    "\n",
-    "# Subset for upper- and lowercase letters a, b, c, d, e, f, g\n",
-    "a2g = emnist_all[(emnist_all['class'].isin(['a', 'b', 'c', 'd', 'e', 'f', 'g']))]\n",
-    "\n",
+    "raw_test = pd.DataFrame()\n",
+    "raw_test['label'] = label\n",
+    "raw_test['image'] = list(image)\n",
+    "print(raw_train.shape)\n",
+    "raw_test.shape\n",
+    "# combine training and test\n",
+    "raw_data = pd.concat([raw_train,raw_test])\n",
+    "print(raw_data.shape)\n",
+    "#create a 10% subset of raw_data\n",
+    "data = raw_data.sample(frac=0.1, replace=False, random_state=1)\n",
+    "data.shape\n",
+    "# add column \"class\" \n",
+    "class_label = np.array([int_to_char(l) for l in data.iloc[:,0]])\n",
+    "# make a copy of data added with class and image_flat cols\n",
+    "data2 = data\n",
+    "data2['class'] = class_label\n",
+    "# add image_flat\n",
+    "data2['image_flat'] = data2['image'].apply(lambda x: np.array(x).reshape(-1))\n",
+    "# Split to train:test = 7:3\n",
+    "train = data2.iloc[0:56998, :]\n",
+    "test = data2.iloc[56998:, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\wilso\\OneDrive\\Documents from long ago\\Datasci 223\\datasci_223\\.venv\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1497: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.7480759783854594, 0.6389624182436264, 0.5219646237835093, 0.5433253811985825]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize random forest classifier\n",
+    "rf_clf = RandomForestClassifier(n_estimators=20, random_state=5, max_depth=20)\n",
+    "# Train and evaluate model\n",
+    "rf_clf.fit(train['image_flat'].tolist(), train['class'])\n",
+    "y_pred = rf_clf.predict(test['image_flat'].tolist())\n",
+    "# Calculate performance metrics\n",
+    "acc = accuracy_score(test['class'], y_pred)\n",
+    "prec = precision_score(test['class'], y_pred, average='macro')\n",
+    "rec = recall_score(test['class'], y_pred, average='macro')\n",
+    "f1 = f1_score(test['class'], y_pred, average='macro')\n",
+    "cm = confusion_matrix(test['class'], y_pred)\n",
+    "print([acc,prec,rec,f1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\wilso\\AppData\\Local\\Temp\\ipykernel_24200\\2772864361.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  abcxyz['case'] = case_label\n"
+     ]
+    }
+   ],
+   "source": [
     "# Subset for upper- and lowercase letters a, b, c, x, y, z\n",
-    "abcxyz = emnist_all[(emnist_all['class'].isin(['a', 'b', 'c', 'A', 'B', 'C', \\\n",
-    "                                               'x', 'y', 'z', 'X', 'Y', 'Z']))]"
+    "abcxyz = data2[(data2['class'].isin(['a', 'b', 'c', 'A', 'B', 'C', \\\n",
+    "                                               'x', 'y', 'z', 'X', 'Y', 'Z']))]\n",
+    "# add column \"case\" \n",
+    "case_label = np.array([which_case(l) for l in abcxyz.iloc[:,2]])\n",
+    "abcxyz['case'] = case_label"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Display the size of a2g, abcxyz, digits, and the full dataset\n",
-    "display(Markdown(f'# Dataset Sizes'))\n",
-    "display(Markdown(f'**a2g**: {len(a2g)}'))\n",
-    "display(Markdown(f'**abcxyz**: {len(abcxyz)}'))\n",
-    "display(Markdown(f'**digits**: {len(digits)}'))\n",
-    "display(Markdown(f'**emnist_all**: {len(emnist_all)}'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# FIXME: Classify lettters as uppercase/lowercase\n",
-    "abcxyz['is_upper'] = ...\n",
+    "# Data splitting\n",
+    "X=abcxyz['image_flat'].tolist()\n",
+    "y=abcxyz['case'].tolist()\n",
+    "# Select candidate models, hyperparameter options, and evaluation metric\n",
+    "rf_param_grid = {'n_estimators': [10, 20], 'max_depth': [10, 20], 'random_state': [5, 5]}\n",
+    "xgb_param_grid = {'n_estimators': [10, 20], 'max_depth': [3, 5], 'learning_rate': [0.3, 0.4], 'random_state': [5, 5]}\n",
     "\n",
-    "# FIXME: Classify digits as even/odd\n",
-    "digits['is_even'] = ..."
+    "scoring_metric = 'accuracy'\n",
+    "# Split data into train and test\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "# Define how many folds to split on\n",
+    "kf = KFold(n_splits=2, shuffle=True, random_state=42)\n",
+    "models = [\n",
+    "    (RandomForestClassifier(), rf_param_grid),\n",
+    "    (XGBClassifier(), xgb_param_grid)\n",
+    "]\n",
+    "# Initialize best score and best model\n",
+    "best_score = 0\n",
+    "best_model = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Model: {'bootstrap': True, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 10, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 2, 'min_weight_fraction_leaf': 0.0, 'monotonic_cst': None, 'n_estimators': 20, 'n_jobs': None, 'oob_score': False, 'random_state': 5, 'verbose': 0, 'warm_start': False}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.7984024343856979"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for model, param_grid in models:\n",
+    "    for param_combination in ParameterGrid(param_grid):\n",
+    "        model.set_params(**param_combination)\n",
+    " # cross_val_score returns array of scores, which you need to take the avg\n",
+    "        scores = cross_val_score(model, X_train, y_train, cv=kf, scoring='accuracy')\n",
+    "        avg_score = np.mean(scores)\n",
+    "        if avg_score > best_score:\n",
+    "            best_score = avg_score\n",
+    "            best_model = model.get_params()\n",
+    "# Print the best model\n",
+    "print(\"Best Model:\", best_model)\n",
+    "best_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Hold-out Score: 0.823574144486692\n"
+     ]
+    }
+   ],
+   "source": [
+    "randfor_clf = RandomForestClassifier(n_estimators=20, random_state=5, max_depth=10)\n",
+    "randfor_clf.fit(X_train, y_train)\n",
+    "y_val_pred = randfor_clf.predict(X_val)\n",
+    "validation_score = accuracy_score(y_val, y_val_pred)\n",
+    "print(f\"Validation Hold-out Score: {validation_score}\")"
+   ]
   }
  ],
  "metadata": {
@@ -334,7 +471,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
